--- a/templates/diabetes.html
+++ b/templates/diabetes.html
@@ -42,7 +42,7 @@
                             </div>
                             <div class="ml-auto">
                                 <a href="{{ url_for('diabetes') }}" class="btn btn-custom btn-custom-primary">
-                                    Diabates
+                                    Diabetes
                                   </a>    
                                 <a href="{{ url_for('heartdisease') }}" class="btn btn-custom btn-custom-primary">
                                 Heart Disease
