--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="user_info">
                   <div class="dd">MediTrain AI</div>
-                  <p>Your Virtual Medical Assignment</p>
+                  <p>Your Virtual Medical Assistant</p>
                 </div>
                 <div class="ml-auto">
                   <a href="{{ url_for('lpage') }}" class="btn btn-custom btn-custom-primary">
